<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.suraj.firebasedemo.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#8dd2e7"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boxer_id" />

        <EditText
            android:id="@+id/bxrId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_id" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boxer_name" />

        <EditText
            android:id="@+id/bxrName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/boxer_Name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boxer_punch_power" />

        <EditText
            android:id="@+id/bxrPunchPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/punch_power" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punch_speed" />

        <EditText
            android:id="@+id/bxrPunchSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_the_boxer_punch_speed" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stamina" />

        <EditText
            android:id="@+id/bxrStamina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_boxer_stamina" />

        <Button
            android:id="@+id/sendData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d1eef7"
            android:shadowColor="#ffffff"
            android:text="@string/send_datas_to_server"
            android:textColor="#ff2377"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/readData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d1eef7"
            android:shadowColor="#cfa6a6"
            android:text="@string/goto_second_activity_for_read_data"
            android:textColor="#2723ff"
            android:onClick="readData"
            android:textStyle="bold|italic" />

    </LinearLayout>

</RelativeLayout>
